Closed Bug 802896 Opened 13 years ago Closed 13 years ago

nsIMEStateManager should use nsPresContext::GetNearestWidget() instead of its GetWidget()

Categories

(Core :: Internationalization, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla19

People

(Reporter: masayuki, Assigned: masayuki)

References

Details

Attachments

(1 file)

Attached patch PatchSplinter Review
Now, we can remove nsIMEStateManager::GetWidget() because of nsPresContext::GetNearestWidget() has been implemented and all IME related code should use it.
Attachment #672606 - Flags: review?(bugs)
Attachment #672606 - Flags: review?(bugs) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: