Bug 802896 nsIMEStateManager should use nsPresContext::GetNearestWidget() instead of its GetWidget() r=smaug